--- a/BlogAppMVC.Web/BlogAppMVC.Web.csproj
+++ b/BlogAppMVC.Web/BlogAppMVC.Web.csproj
@@ -7,6 +7,19 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BlogAppMVC.Application\BlogAppMVC.Application.csproj" />
+    <ProjectReference Include="..\BlogAppMVC.Infrastructure\BlogAppMVC.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\" />
   </ItemGroup>
 
 </Project>
